# automesh

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CITATION.cff  Cargo.toml  README.md  book.toml  build.rs  pyproject.toml  temporary.py
.githhub/workflows/: Test.yml
.github/workflows/: Book.yml  Bump.yml  Pages.yml  PyPI.yml  Python.yml  Rust.yml  Test.yml  book.yml  build_wheels.sh  bump.yml  pypi.yml  python.yml  rust.yml  test.yml
benches/: block.rs  block.sh  compare.py  compare.sh
book/: SUMMARY.md  cli.md  encrypted.md  getting_started.md  getting_started_dev.md  installation.md  introduction.md  mathematics.md  python.md  rust.md  sandbox.md
book/analysis/sphere_with_shells/: README.md  conforming.md  conforming_spheres.jou  log_strain_sr2.yml  rate_of_deformation_sr3.yml  rigid_body_ang_acel.yml  rigid_body_ang_pos.yml  rigid_body_ang_vel.yml  simulation.md  smoothed.md  spheres_cont.py  timing_automesh.md  timing_sculpt.md  voxel_sculpt.md
book/analysis/sphere_with_shells/img/: spheres_cont_dim.idraw  tracers_sr_2_3_4.idraw  tracers_sr_2_3_4_conf.idraw
book/analysis/sphere_with_shells/recipes/: displacement_base.yml  displacement_sr3c.yml  displacement_t10.yml  foo.py  hist_sr2sx.yml  log_strain_sr2.yml  log_strain_sr2c.yml  log_strain_sr3.yml  log_strain_sr3c.yml  log_strain_sr4.yml  log_strain_t10.yml  rate_of_deformation_sr2.yml  rate_of_deformation_sr2c.yml  rate_of_deformation_sr3.yml  rate_of_deformation_sr3c.yml  rate_of_deformation_t10.yml  rigid_body_ang_pos.yml  rigid_body_ang_vel.yml
book/analysis/sphere_with_shells/xyfigure_recipes/: displacement_sr2.yml  displacement_sr2c.yml  displacement_sr3.yml  displacement_sr4.yml  displacement_t10.yml  log_strain_sr2.yml  log_strain_sr2c.yml  log_strain_sr3.yml  log_strain_sr3c.yml  log_strain_sr4.yml  log_strain_t10.yml  rate_of_deformation_sr2.yml  rate_of_deformation_sr2c.yml  rate_of_deformation_sr3.yml  rate_of_deformation_sr4.yml  rate_of_deformation_t10.yml  rigid_body_ang_acel.yml  rigid_body_ang_pos.yml  rigid_body_ang_vel.yml
book/cli/: convert.md  defeature.md  mesh.md  metrics.md  metrics_triangle.py
book/cli/img/: metrics.pptx
book/development/: README.md  python.md  rust.md
book/dualization/: README.md
book/dualization/code/: circle.py  quadtree.py
book/examples/: temporary.md
book/examples/smoothing/: README.md  noise_augmentation.py  python_visualization.md  smoothing.py  smoothing_examples.py  smoothing_figures.py  smoothing_test.py  smoothing_types.py  sphere.jou  taubin.md
book/examples/sphere_with_shells/: README.md  histogram.py  spheres_cont.py
book/examples/spheres/: README.md  spheres.md  spheres.py  spheres_ball_1_.inp  spheres_ball_3_.inp  spheres_ball_3_.npy  spheres_ball_5_.inp  spheres_radius_1.inp  spheres_radius_3.inp  spheres_radius_5.inp  spheres_sphere_1.inp  spheres_sphere_3.inp  spheres_sphere_5.inp  spheres_sphere_5.npy  test_spheres.py
book/examples/spheres_cont/: README.md  spheres_cont.py
book/examples/unit_tests/: README.md  examples_figures.py  examples_test.py  figures.py  figures_test.py  spheres_cont.idraw  test_figures.py
book/interfaces/: README.md  cli.md  python.md  rust.md
book/smoothing/: README.md  bracket_morph.idraw  laplace_hierarchical.md  laplace_smoothing.xlsx  smoothing_types.py  taubin.md  tripoints.idraw
book/theory/: README.md  hierarchy_sidesets.pptx  laplace_smoothing.xlsx  mathematics.md  smoothing.md  smoothing_laplace.tex
doc/: README.md  dev_workflow.md  encrypted.md  exodus.md  logs.md  voxels.py
docs/: index.html  module.html.jinja2
python/automesh/: __init__.py  utility.py
python/automesh/automesh/: __init__.py
sandbox/: __init__.py  deprecated_pyproject.toml  dev_workflow.md  figures.py  hello.py  logs.md  metrics.py  pyproject.toml  smoothing.py  smoothing_figures.py  smoothing_test.py  smoothing_types.py  test_figures.py  test_hello.py  test_smoothing.py  tet_to_hex_types.py
src/: lib.rs  main.rs  py.rs
src/abaqus/: mod.rs
src/exodus/: mod.rs  py.rs
src/fem/: mod.rs  py.rs  test.rs
src/fem/hex/: mod.rs  py.rs
src/fem/tri/: mod.rs  py.rs
src/geometry/: mod.rs
src/io/: mod.rs
src/io/exodus/: mod.rs
src/io/spn/: mod.rs
src/npy/: mod.rs  py.rs  test.rs
src/spn/: mod.rs  py.rs  test.rs
src/tessellation/: mod.rs
src/tree/: mod.rs  test.rs
src/voxel/: mod.rs  py.rs  test.rs
tests/: fem.py  fem.rs  foo.rs  geometry.rs  io.rs  npy.py  npy.rs  single.py  spn.py  spn.rs  spn_single.rs  tessellation.rs  test_utility.py  voxel.py  voxel.rs  voxel_data.rs  voxels.py  voxels.rs  voxels_data.rs
tests/input/: f.inp  f.spn  f_fiducial.inp  letter_f.spn  letter_f_3d.inp  letter_f_3d.spn  letter_f_3d_0.tif  letter_f_3d_1.tif  letter_f_3d_2.tif  single.npy  single_valence_03.inp  single_valence_03_noise1.csv  single_valence_03_noise1.inp  single_valence_04.csv  single_valence_04.inp  single_valence_04_noise2.csv  single_valence_04_noise2.inp  single_valence_05.csv  single_valence_05.inp  single_valence_06.csv  single_valence_06.inp  single_valence_10.csv  single_valence_10.inp  sparse.inp  sparse.npy  stripes.npy  stripes_odd.npy
tests/npy/: fd.npy
tests/yml/: min_schema_version.yml
