[package]
authors = ["Chad B. Hovey <chovey@sandia.gov>", "Michael R. Buche <mrbuche@sandia.gov>"]
categories = ["mathematics", "science"]
description = "automesh"
documentation = "https://docs.rs/automesh"
edition = "2021"
homepage = "https://github.com/autotwin/automesh"
keywords = ["mesh"]
license = "MIT"
name = "automesh"
repository = "https://github.com/autotwin/automesh"
version = "0.1.3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
itertools = "0.13.0"
ndarray = {version = "=0.15"}
ndarray-npy = {version = "=0.8"}
numpy = {version = "=0.21", optional = true}
pyo3 = {version = "=0.21", features = ["extension-module"], optional = true}

[features]
python = ["dep:numpy", "dep:pyo3"]

[profile.release]
codegen-units = 1
lto = false
