[package]
authors = ["Chad B. Hovey <chovey@sandia.gov>", "Michael R. Buche <mrbuche@sandia.gov>"]
categories = ["mathematics", "science"]
description = "Automatic mesh generation."
documentation = "https://docs.rs/automesh"
edition = "2021"
homepage = "https://github.com/autotwin/automesh"
keywords = ["mesh"]
license = "MIT"
name = "automesh"
repository = "https://github.com/autotwin/automesh"
version = "0.1.6"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "=4.5.17", features = ["derive"] }
chrono = "=0.4.38"
itertools = {version = "=0.13.0"}
ndarray = {version = "=0.15"}
ndarray-npy = {version = "=0.8"}
numpy = {version = "=0.21", optional = true}
pyo3 = {version = "=0.21", features = ["extension-module"], optional = true}
svgbobdoc = { version = "=0.3.0", features = ["enable"] }

[features]
python = ["dep:numpy", "dep:pyo3"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "docs/katex.html"]

[profile.release]
codegen-units = 1
lto = false
