[build-system]
requires = [
  "cffi==1.16.0",
  "maturin==1.6.0"
]
build-backend = "maturin"

[project]
name = "automesh"
description = "automesh"
authors = [
  {email = "chovey@sandia.gov"},
  {name = "Chad Brian Hovey"},
  {email = "mrbuche@sandia.gov"},
  {name = "Michael R. Buche"},
]
requires-python = ">=3.8,<=3.12"
classifiers = [
  'License :: OSI Approved :: BSD License',
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering',
  'Programming Language :: Python',
  'Programming Language :: Rust',
]

[project.optional-dependencies]
dev = [
  "pre-commit"
]

[project.urls]
Documentation = "https://github.com/autotwin/automesh"
Homepage = "https://github.com/autotwin/automesh"
Repository = "https://github.com/autotwin/automesh"
